--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
         <h1>Welcome to my Phone Hunter!</h1>
     </header>
     <main>
-        <div id="phone-container" class="row row-cols-1 row-cols-md-3 g-4>
-            
+        <div class="mb-3 w-50">
+            <input type="email" class="form-control" id="search-field" placeholder="Search your Phone">
+            <button id="search-btn" class="btn btn-primary">Search</button>
+        </div>
+
+        <div id="phone-container" class="row row-cols-1 row-cols-md-3 g-4">
+
         </div>
     </main>
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-            </script>
-            <script src="js/app.js"></script>
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
+        </script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
