Show and hide loading spinner while loading API data

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
         <div id="search-no-phone-msg" class="d-none mt-4">
             <h3 class=" text-warning">Phone No Found! Please try a new search</h3>
         </div>
+
+        <div id="loader" style="height: 400px;" class="d-none d-flex justify-content-center align-items-center">
+            <div class="spinner-border text-success" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
     </main>
     <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
