Show All button to display all data

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <h3 class=" text-warning">Phone No Found! Please try a new search</h3>
         </div>
 
+        <div id="show-all" class="text-center d-none">
+            <div id="btn-show-all" class="btn btn-primary">Show All</div>
+        </div>
+
         <div id="loader" style="height: 400px;" class="d-none d-flex justify-content-center align-items-center">
             <div class="spinner-border text-success" role="status">
                 <span class="visually-hidden">Loading...</span>
